--- a/projects/sandbox/src/index.html
+++ b/projects/sandbox/src/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>Sandbox</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>Sandbox</title>
+    <base href="/">
+    <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1"
+    >
+    <link
+        rel="icon"
+        type="image/x-icon"
+        href="favicon.ico"
+    >
+    <link
+        rel="preconnect"
+        href="https://fonts.googleapis.com"
+    >
+    <link
+        rel="preconnect"
+        href="https://fonts.gstatic.com"
+        crossorigin
+    >
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700&display=swap"
+        rel="stylesheet"
+    >
 </head>
-<body>
-  <app-root></app-root>
+
+<body class="antialiased text-gray-700 leading-normal bg-gray-50">
+    <app-root></app-root>
 </body>
+
 </html>
