chore(doc): seo

--- a/projects/sandbox/src/index.html
+++ b/projects/sandbox/src/index.html
@@ -3,7 +3,33 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sandbox</title>
+    <title>Tailwind CSS components for Angular</title>
+
+    <meta
+        property="og:title"
+        content="Tailwind CSS components for Angular"
+    >
+    <meta
+        name="description"
+        content="Package to help you build web applications with Angular and Tailwind CSS"
+    >
+    <meta
+        property="og:description"
+        content="Package to help you build web applications with Angular and Tailwind CSS"
+    >
+    <meta
+        property="og:image"
+        content="https://ng-tw.mtda.me/assets/images/og-image.png"
+    >
+    <meta
+        property="og:type"
+        content="website"
+    >
+    <meta
+        property="og:locale"
+        content="en_US"
+    >
+
     <base href="/">
     <meta
         name="viewport"
